2007-12-20  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/pdbformat.cpp: fix crash [#1846728].
	* src/math/spacegroup.cpp: add missing header.

2007-12-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/forcefield.h (HasAnalyticalGradients): New
	method to define if full analytical gradients are implemented for
	a force field. Allows code to choose analytical vs. numeric based
	on implementation. Defaults to false (i.e., implement analytical
	later).
	
	* src/forcefields/forcefieldghemical.h,
	src/forcefields/forcefielduff.h: Define that analytical gradients
	are implemented.

2007-12-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: Cleaned up
	header file and documentation. All private variables now start with
	"_". Added support for Molecular Dynamics.

	* src/ops.cpp: fix compiler error.

2007-12-17 Chris Morley

	Try to resynchronize.
	
	* src/obconversion.cpp, /include/openbabel/obconversion.h:
	Change return type of AddChemObject from bool to int. 
	This allows the modes with and without a queue of 2 to be
	distinguished. It is backward compatible and in fact has been
	this way previously. Consequential changes in GetChemObject() in
	obmolecformat.cpp, rxnformat.cpp, 
	
	* include/openbabel/forcefield.h(UpdateConformers, UpdateCoordinates):
	return values.
	
	* src/dock.cpp(GridDockNextPose): add return value.

	* src/atom.cpp(GetResidue): return a value
	
	* src/transform.cpp: filter mol if DoOps returns false. 

	* include/openbabel/op.h(DoOps) return false if Do() does,
	to aid filtering. Minor documentaion.
	
	* include/openbabel/plugin.h: Minor documentation.
	
	* include/openbabel/reaction.h: Add support for an Agent molecule.

	* src/gen3d.cpp: Add start and stop ErrorWrap so OBBuilder diagnostic
	code to cerr is demoted to obInfo messages.
	
	* src/oberror.cpp(StopErrorWrap):Set _inWrapStreamBuf to NULL.
	so can handle multiple molecules.
	