@@ -1,3 +1,8 @@
+2008-01-03  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/formats/xyzformat.cpp: Accept non-standard XYZ files with an
+	atom number rather than an element symbol in the first column.
+
 2007-12-20  Jean Brefort  <jean.brefort@normalesup.org>
 
 	* src/formats/pdbformat.cpp: fix crash [#1846728].
